--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
             <div class="contact-info-item padd-15">
               <div class="icon"> <i class="fa fa-globe-europe"></i></div>
               <h4>Website</h4>
-              <p>ww.ljsk.com</p>
+              <p>portfolio-beta-eight-27.vercel.app</p>
             </div>
 
             <div class="contact-info-item">
